Make "view" and "fetchPlan" synonyms in REST API #13
